Dark Mode Fix -- Pager
The pager now changes colors based on mode.

--- a/public/css/pager.css
+++ b/public/css/pager.css
@@ -18,7 +18,7 @@ ul.yiiPager li
 ul.yiiPager a:link,
 ul.yiiPager a:visited
 {
-	background-color: #fff;
+	background-color: var(--pager-bg-color);
 	border:solid 0px #9aafe5;
 	font-weight:bold;
 	color:#75A1A1;
